// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.pd.api;

import "third_party/protobuf/cpp_features.proto";

option features.(pb.cpp).string_type = VIEW;
option features.field_presence = IMPLICIT;
option java_multiple_files = true;
option java_package = "com.google.android.as.oss.pd.api.proto";

// Request to download a blob.
message DownloadBlobRequest {
  Metadata metadata = 1;

  // The authentication key with Google server
  string api_key = 1001;

  // Define the download mode.
  DownloadMode download_mode = 1002;

  enum DownloadMode {
    MODE_UNSPECIFIED = 0;

    // Request partial updates, whenever it's possible.
    PARTIAL_UPDATES_ENABLED = 1;

    // Requests the full package.
    FULL_PACKAGE_FORCED = 2;
  }

  reserved 2, 3, 4, 5, 6;
}

// Metadata is the wrapper of all the information to be sent to the *Guards for
// content binding.
message Metadata {
  // Constraints placed on the blob in blob selection.
  BlobConstraints blob_constraints = 1;

  // The cryptographic keys to use for encrypting the blob.
  CryptoKeys crypto_keys = 3;

  reserved 2;
}

// BlobConstraints expresses the constraints placed on the blob during
// blob selection.
message BlobConstraints {
  // The tier this device is in, which gives some hint about the HW capabilities
  // of the device.
  enum DeviceTier {
    UNKNOWN = 0;
    ULTRA_LOW = 1;
    LOW = 2;
    MID = 3;
    HIGH = 4;
    ULTRA = 5;
  }

  DeviceTier device_tier = 1001;

  enum Client {
    UNDEFINED = 0;
    SUSPICIOUS_MESSAGE_ALERTS = 1;
    PLAY_PROTECT_SERVICE = 2;
    PLAY_PROTECT_SERVICE_CORE_DEFAULT = 3;
    AI_CORE_PROTECTED_DOWNLOAD = 4;
    AI_CORE_TEXT_INPUT = 5;
    AI_CORE_IMAGE_OUTPUT = 6;
    PLAY_PROTECT_SERVICE_PVM_DEFAULT = 7;
    AI_CORE_TEXT_OUTPUT = 8;
    AI_CORE_IMAGE_INPUT = 9;
    AI_CORE_MESSAGES_TEXT = 10;
    AI_CORE_CHROME_SUMMARIZATION_OUTPUT = 11;

    // AI_CORE clients reserved range from 12 to 100
    AI_CORE_CLIENT_12 = 12;
    AI_CORE_CLIENT_13 = 13;
    AI_CORE_CLIENT_14 = 14;
    AI_CORE_CLIENT_15 = 15;
    AI_CORE_CLIENT_16 = 16;
    AI_CORE_CLIENT_17 = 17;
    AI_CORE_CLIENT_18 = 18;
    AI_CORE_CLIENT_19 = 19;
    AI_CORE_CLIENT_20 = 20;
    AI_CORE_CLIENT_21 = 21;
    AI_CORE_CLIENT_22 = 22;
    AI_CORE_CLIENT_23 = 23;
    AI_CORE_CLIENT_24 = 24;
    AI_CORE_CLIENT_25 = 25;
    AI_CORE_CLIENT_26 = 26;
    AI_CORE_CLIENT_27 = 27;
    AI_CORE_CLIENT_28 = 28;
    AI_CORE_CLIENT_29 = 29;
    AI_CORE_CLIENT_30 = 30;
    AI_CORE_CLIENT_31 = 31;
    AI_CORE_CLIENT_32 = 32;
    AI_CORE_CLIENT_33 = 33;
    AI_CORE_CLIENT_34 = 34;
    AI_CORE_CLIENT_35 = 35;
    AI_CORE_CLIENT_36 = 36;
    AI_CORE_CLIENT_37 = 37;
    AI_CORE_CLIENT_38 = 38;
    AI_CORE_CLIENT_39 = 39;
    AI_CORE_CLIENT_40 = 40;
    AI_CORE_CLIENT_41 = 41;
    AI_CORE_CLIENT_42 = 42;
    AI_CORE_CLIENT_43 = 43;
    AI_CORE_CLIENT_44 = 44;
    AI_CORE_CLIENT_45 = 45;
    AI_CORE_CLIENT_46 = 46;
    AI_CORE_CLIENT_47 = 47;
    AI_CORE_CLIENT_48 = 48;
    AI_CORE_CLIENT_49 = 49;
    AI_CORE_CLIENT_50 = 50;

    // PSI clients reserved range from 101 to 200
    PSI_MDD_MODELS_CLIENT = 101;
    PSI_LLM_OUTPUT_CLASSIFIER_CLIENT = 102;
    PSI_NON_LLM_OUTPUT_CLASSIFIER_CLIENT = 103;
    PSI_TEXT_INPUT_REGEXT_ONLY_CLASSIFIER_CLIENT = 104;
    PSI_TEXT_OUTPUT_REGEX_ONLY_CLASSIFIER_CLIENT = 105;

    reserved 10000 to 10004, 99997 to 99999;
  }

  Client client = 1002;

  enum ClientGroup {
    ALL = 0;
    BETA = 1;
    ALPHA = 2;
    THIRD_PARTY_EAP = 3;
    THIRD_PARTY_EXPERIMENTAL = 4;
  }

  ClientGroup client_group = 1003;

  // Client SDK Version to help server estimate SDK capabilities.
  message ClientVersion {
    enum Type {
      TYPE_UNKNOWN = 0;
      TYPE_ANDROID = 1;
      TYPE_ANDROID_CORE = 2;
      TYPE_ANDROID_CORE_ATTESTED_PKVM = 3;
    }

    // Type of the SDK.
    Type type = 1;

    // Build CL for the SDK.
    int64 version = 2;
  }

  // Version of SDK requesting new download.
  ClientVersion client_version = 1004;

  // Variants that differentiate device types
  enum Variant {
    VARIANT_UNSPECIFIED = 0;
    OEM = 1;

    // Pixel8 (SoC: Zuma)
    PIXEL = 2;
    SAMSUNG_QC = 3;
    SAMSUNG_SLSI = 4;

    VARIANT_5 = 5;
    VARIANT_6 = 6;
    VARIANT_7 = 7;
    VARIANT_8 = 8;
    VARIANT_9 = 9;
    VARIANT_10 = 10;
    VARIANT_11 = 11;
    VARIANT_12 = 12;
    VARIANT_13 = 13;
    VARIANT_14 = 14;
    VARIANT_15 = 15;
    VARIANT_16 = 16;
    VARIANT_17 = 17;
    VARIANT_18 = 18;
    VARIANT_19 = 19;
    VARIANT_20 = 20;
    VARIANT_21 = 21;
    VARIANT_22 = 22;
    VARIANT_23 = 23;
    VARIANT_24 = 24;
    VARIANT_25 = 25;
    VARIANT_26 = 26;
    VARIANT_27 = 27;
    VARIANT_28 = 28;
    VARIANT_29 = 29;
    VARIANT_30 = 30;
    VARIANT_31 = 31;
    VARIANT_32 = 32;
    VARIANT_33 = 33;
    VARIANT_34 = 34;
    VARIANT_35 = 35;
    VARIANT_36 = 36;
    VARIANT_37 = 37;
    VARIANT_38 = 38;
    VARIANT_39 = 39;
    VARIANT_40 = 40;
  }

  // Variant of the Android device requests a new download.
  Variant variant = 1005;

  // An optional build id to override the value returned by the DeviceConfig.
  int64 build_id = 1006;

  reserved 1, 2, 3, 4, 5;
}

// The cryptographic keys to use for encrypting the blob.
message CryptoKeys {
  // The device generated public key to encrypt the blob.
  bytes public_key = 1;
}

// The type of component.
enum ProtectionType {
  TYPE_UNKNOWN = 0;
  TYPE_RULE = 1;
  TYPE_MODEL = 2;
  TYPE_BLM_BLOCK_LIST = 4;
  reserved 3, 5, 6;
}

message ProtectionComponent {
  // Component content.
  bytes blob = 1;

  ProtectionType type = 2;

  // Optional: If set, it indicates this component is an update to a previous
  // protection.
  bool is_partial_update = 4;

  // Optional: The index of the component.
  int32 partial_update_index = 5;

  reserved 3;
}

// Response that has the downloaded blob.
message DownloadBlobResponse {
  // The blob for the client identified by 'client_id'.
  // The blob is encrypted using 'crypto_keys' in DownloadBlobRequest.
  bytes blob = 1;

  // Opaque server side generated token for clients to pass back in their next
  // DownloadBlobRequest.
  bytes next_page_token = 2;

  // Opaque server generated token that identifies the download requested by the
  // given BlobConstraints. This token is only used for debugging purposes.
  bytes protection_token = 6;

  // Proof that can be verified to ensure the blob shipped to user devices
  // has been included in a transparency log.
  ProtectionProof protection_proof_v2 = 12;
  repeated ProtectionComponent protection_components = 13;

  // This type specifies the status of the downloaded package.
  DownloadStatus download_status = 14;

  enum DownloadStatus {
    STATUS_UNSPECIFIED = 0;
    FULL_PACKAGE_DOWNLOADED = 1;
    PARTIAL_PACKAGE_UPDATED = 2;
    PARTIAL_UPDATE_EMPTY = 3;
  }

  reserved 3, 4, 5, 7, 8, 9, 10, 11, 15;
}

// LogEntryId identifies a specific entry in the transparency log.
message LogEntryId {
  // The leaf index in the Merkle tree which backs up the transparency log.
  uint64 leaf_index = 1;

  // The id of the Merkle tree which backs up the transparency log.
  int64 tree_id = 2;
}

// InclusionProof is the proof that a transparency log contains a certain entry.
message InclusionProof {
  // hashes contains the inclusion proof hashes.
  repeated bytes hashes = 1;
}

// LogCheckpoint is a checkpoint in the transparency log.
message LogCheckpoint {
  // checkpoint contains the bytes of log root
  bytes checkpoint = 1;

  // signature contains a signature over the bytes of checkpoint.
  // The signature must be checked before relying on the contents of checkpoint.
  bytes signature = 2;
}

// ProtectionProof is the proof that can be verified to ensure the blob
// shipped to user devices has been included in transparency logs.
message ProtectionProof {
  // The id of the entry in the transparency log that contains the
  // blob hash.
  LogEntryId log_entry_id = 1;

  // A checkpoint of the transparency log taken at the time of serving the
  // blob.
  LogCheckpoint log_checkpoint = 2;

  // Proof that the blob is included in the transparency log.
  InclusionProof inclusion_proof = 3;
}

// Request to download a manifest.
message GetManifestConfigRequest {
  // Constraints placed on the resources that will be selected.
  BlobConstraints constraints = 1;

  // The authentication key with Google server
  string api_key = 1001;

  // Options to transform the manifest config.
  ManifestTransform manifest_transform = 2;
}

// Response from ProtectedDownloadService, which includes a ManifestConfig with
// instructions on how to download protected bytes.
message GetManifestConfigResponse {
  // Serialized Manifest config proto.
  bytes manifest_config = 1;
}

// Options to transform the manifest config.
message ManifestTransform {
  // Whether to compress the manifest config.
  bool compress_manifest = 1;
}

message GetVmRequest {
  // Path to the APK that contains the VM payload.
  string apk_path = 1 [deprecated = true];

  // Path to the payload to be loaded into the VM.
  string payload_path = 2;

  // Package name of the app making the request
  string package_name = 3;
}

message GetVmResponse {}

message DeleteVmRequest {}

message DeleteVmResponse {}

// Service API for downloading blobs.
service ProtectedDownloadService {
  // Downloads a blob to the device
  rpc Download(DownloadBlobRequest) returns (DownloadBlobResponse);

  // Downloads a manifest to the device
  rpc GetManifestConfig(GetManifestConfigRequest)
      returns (GetManifestConfigResponse);

  // Start a VM and get its descriptor
  rpc GetVmDescriptor(GetVmRequest) returns (GetVmResponse);

  // Delete a VM
  rpc DeleteVm(DeleteVmRequest) returns (DeleteVmResponse);
}
